// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GainOrder should sort correctly: all candidate pairs 1`] = `
Array [
  Array [
    Array [
      2,
    ],
    Array [
      3,
    ],
    Array [
      2,
      3,
    ],
    Array [
      0,
    ],
  ],
  Array [
    Array [
      2,
    ],
    Array [
      1,
    ],
    Array [
      2,
      1,
    ],
    Array [
      0,
    ],
  ],
  Array [
    Array [
      1,
    ],
    Array [
      3,
    ],
    Array [
      1,
      3,
    ],
    Array [
      0,
    ],
  ],
]
`;

exports[`GainOrder should sort correctly: first round of pairs sorted by gain 1`] = `
Array [
  Array [
    Array [
      2,
    ],
    Array [
      3,
    ],
    Array [
      2,
      3,
    ],
    Array [
      15.632245205312007,
    ],
  ],
  Array [
    Array [
      1,
    ],
    Array [
      3,
    ],
    Array [
      1,
      3,
    ],
    Array [
      15.632245205312007,
    ],
  ],
]
`;

exports[`GainOrder should sort correctly: first round of pairs sorted by gain 2`] = `
Array [
  Array [
    Array [
      3,
    ],
    Array [
      1,
    ],
    Array [
      3,
      1,
    ],
    Array [
      0.7243761756592448,
    ],
  ],
  Array [
    Array [
      4,
    ],
    Array [
      1,
    ],
    Array [
      4,
      1,
    ],
    Array [
      -11.700255160864689,
    ],
  ],
  Array [
    Array [
      8,
    ],
    Array [
      1,
    ],
    Array [
      8,
      1,
    ],
    Array [
      -11.782198722977299,
    ],
  ],
  Array [
    Array [
      6,
    ],
    Array [
      1,
    ],
    Array [
      6,
      1,
    ],
    Array [
      -11.782198722977299,
    ],
  ],
  Array [
    Array [
      2,
    ],
    Array [
      1,
    ],
    Array [
      2,
      1,
    ],
    Array [
      -11.782198722977299,
    ],
  ],
]
`;
